Melhorias implementadas para remover warnings